update and create burger

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
           <a href="#">CONTACT US</a>
         </div>
       </div>
+      <input type="checkbox" id="check-menu">
+      <label class="burger" for="check-menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </label>
     </div>
 
     <div class="WhyChooseUs">
@@ -84,10 +90,12 @@
             <img src="./images/search.svg" alt="">
             <span>Search Places</span>
           </div>
+          <div class="dashes"></div>
           <div class="two part">
             <img src="./images/check.svg" alt="">
             <span>Select Places</span>
           </div>
+          <div class="dashes"></div>
           <div class="three part">
             <img src="./images/like2.svg" alt="">
             <span>Book & Enjoy</span>
