finished menu_list

--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
     <div class="menu">
       <div class="conteiner">
         <div class="namePage">BHROMAON</div>
-        <div class="menu_list">
-          <a href="#">WHO WE ARE</a>
-          <a href="#">WHAT WE DO</a>
-          <a href="#">TRAVEL WITH US</a>
-          <a href="#">CONTACT US</a>
+        <div class="menu_burger">
+          <input type="checkbox" id="check-menu">
+          <label class="burger" for="check-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </label>
+          <div class="menu_list">
+            <a href="#">WHO WE ARE</a>
+            <a href="#">WHAT WE DO</a>
+            <a href="#">TRAVEL WITH US</a>
+            <a href="#">CONTACT US</a>
+          </div>
         </div>
       </div>
-      <input type="checkbox" id="check-menu">
-      <label class="burger" for="check-menu">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-      </label>
     </div>
 
     <div class="WhyChooseUs">
