--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 <body>
   <div class="allDocument">
-
-    <div class="BHROMAON">
+    <!-------------------------------------------->
+    <!-----------  BHROMAON  --------------------->
+    <!-------------------------------------------->
+    <SECTION class="BHROMAON">
       <div class="conteiner">
         <div class="title_BHROMAON">
           BHROMAON
@@ -36,8 +38,10 @@
           <img src="./images/scroll.png" alt="down arrow!">
         </div>
       </div>
-    </div>
-
+    </SECTION>
+    <!-------------------------------------------->
+    <!-----------    MENU    --------------------->
+    <!-------------------------------------------->
     <div class="menu">
       <div class="conteiner">
         <div class="namePage">BHROMAON</div>
@@ -57,7 +61,9 @@
         </div>
       </div>
     </div>
-
+    <!-------------------------------------------->
+    <!---------  WHY CHOOSE US ------------------->
+    <!-------------------------------------------->
     <div class="WhyChooseUs">
       <div class="conteiner">
         <div class="row_colums_WhyChooseUs">
@@ -78,13 +84,15 @@
             <div class="button button_WhyChooseUs">EXPLORE PLACES</div>
           </div>
           <div class="column2_WhyChooseUs">
-            <div class="IMGcolumn1"><img src="./images/WhyChooseUs_1L.png" alt=""></div>
-            <div class="IMGcolumn2"><img src="./images/WhyChooseUs_2R.png" alt=""></div>
+            <div class="IMGcolumn1"><img class="cascad" src="./images/WhyChooseUs_1L.png" alt=""></div>
+            <div class="IMGcolumn2"><img class="cascad" src="./images/WhyChooseUs_2R.png" alt=""></div>
           </div>
         </div>
       </div>
     </div>
-
+    <!-------------------------------------------->
+    <!----------  ARCS & ICONS  ------------------>
+    <!-------------------------------------------->
     <div class="arcsIcons">
       <div class="conteiner">
         <div class="content_arcsIcons_row">
@@ -92,12 +100,10 @@
             <img src="./images/search.svg" alt="">
             <span>Search Places</span>
           </div>
-          <div class="dashes"></div>
           <div class="two part">
             <img src="./images/check.svg" alt="">
             <span>Select Places</span>
           </div>
-          <div class="dashes"></div>
           <div class="three part">
             <img src="./images/like2.svg" alt="">
             <span>Book & Enjoy</span>
@@ -105,7 +111,9 @@
         </div>
       </div>
     </div>
-
+    <!-------------------------------------------->
+    <!-----------  ARTICLE LEFT  ----------------->
+    <!-------------------------------------------->
     <div class="articleL">
       <div class="conteiner">
         <div class="content_row_articleL">
@@ -127,7 +135,9 @@
         </div>
       </div>
     </div>
-
+    <!-------------------------------------------->
+    <!-----------  ARTICLE RIGHT  ---------------->
+    <!-------------------------------------------->
     <div class="articleR">
       <div class="conteiner">
         <div class="content_row_articleR">
@@ -149,7 +159,9 @@
         </div>
       </div>
     </div>
-
+    <!-------------------------------------------->
+    <!--------  WTHAT OUR TOURIST SAY  ----------->
+    <!-------------------------------------------->
     <div class="whatOurTouristSay">
       <div class="conteiner">
         <div class="title_whatOurTouristSay">
@@ -185,7 +197,9 @@
         </div>
       </div>
     </div>
-
+    <!-------------------------------------------->
+    <!-----------  SOCIAL LINKS  ----------------->
+    <!-------------------------------------------->
     <div class="socialLinks">
       <div class="conteiner">
         <div class="content_socialLinks">
